Refactoring translation part 2/6
Includes all languages for imminent release
Refactored in english, spanish, french, hungarian, catalan, czech, danish and german

--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -99,7 +99,7 @@ SING_OPTIONS_SOUND=Fuaim
 SING_OPTIONS_INPUT=Ion-chur
 SING_OPTIONS_LYRICS=Faclan
 SING_OPTIONS_THEMES=Ùrlaran
-SING_OPTIONS_RECORD=Clàradh
+SING_OPTIONS_MICROPHONES=Clàradh
 SING_OPTIONS_ADVANCED=Adhartach
 SING_OPTIONS_EXIT=Air ais
 
@@ -127,10 +127,8 @@ SING_OPTIONS_SOUND_WHEREAMI=Roghainnean fuaime
 SING_OPTIONS_SOUND_DESC=Roghainnean fuaime
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Cluich a’ mhicreofon
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Ceòl a’ chùlaibh
-SING_OPTIONS_SOUND_MIC_BOOST=Meudachadh a’ mhic
 SING_OPTIONS_SOUND_CLICK_ASSIST=Cuidiche cliog
 SING_OPTIONS_SOUND_BEAT_CLICK=Cliog nam buillean
-SING_OPTIONS_SOUND_THRESHOLD=Stairsneach
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Modh dà-chluicheadair
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Meudachadh a’ chiùil
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Ro-sheall an àirde
@@ -149,11 +147,13 @@ SING_OPTIONS_THEMES_THEME=Ùrlar
 SING_OPTIONS_THEMES_SKIN=Craiceann
 SING_OPTIONS_THEMES_COLOR=Dath
 
-SING_OPTIONS_RECORD_WHEREAMI=Roghainnean a’ chlàraidh
-SING_OPTIONS_RECORD_DESC=Roghainnean a’ mhicreofon
-SING_OPTIONS_RECORD_CARD=Cairt fuaime
-SING_OPTIONS_RECORD_INPUT=Ion-chur
-SING_OPTIONS_RECORD_CHANNEL=Seanail
+SING_OPTIONS_MICROPHONES_WHEREAMI=Roghainnean a’ chlàraidh
+SING_OPTIONS_MICROPHONES_DESC=Roghainnean a’ mhicreofon
+SING_OPTIONS_MICROPHONES_CARD=Cairt fuaime
+SING_OPTIONS_MICROPHONES_INPUT=Ion-chur
+SING_OPTIONS_MICROPHONES_CHANNEL=Seanail
+SING_OPTIONS_MICROPHONES_THRESHOLD=Stairsneach
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Meudachadh a’ mhic
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Roghainnean adhartach
 SING_OPTIONS_ADVANCED_DESC=Roghainnean adhartach
