--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -98,7 +98,7 @@ SING_OPTIONS_GRAPHICS=Grafika
 SING_OPTIONS_SOUND=Garsas
 SING_OPTIONS_LYRICS=Dainos žodžiai
 SING_OPTIONS_THEMES=Temos
-SING_OPTIONS_RECORD=Įrašyti
+SING_OPTIONS_MICROPHONES=Įrašyti
 SING_OPTIONS_ADVANCED=Išplėstinė
 SING_OPTIONS_EXIT=Atgal
 
@@ -126,10 +126,8 @@ SING_OPTIONS_SOUND_WHEREAMI=Funkcijos Garsas
 SING_OPTIONS_SOUND_DESC=Garso nustatymai
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Mikrofono atkūrimas
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Fonine muzika
-SING_OPTIONS_SOUND_MIC_BOOST=Mikrobangų krosnelė
 SING_OPTIONS_SOUND_CLICK_ASSIST=Spustelėkite padėti
 SING_OPTIONS_SOUND_BEAT_CLICK=Mušti spustelėkite
-SING_OPTIONS_SOUND_THRESHOLD=Slenkstis
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Du žaidėjų režimai
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Muzikos priaugimas
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Peržiūrėti tomas
@@ -148,11 +146,13 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Odos
 SING_OPTIONS_THEMES_COLOR=Spalva
 
-SING_OPTIONS_RECORD_WHEREAMI=Parinktys Įrašas
-SING_OPTIONS_RECORD_DESC=Mikrofono nustatymai
-SING_OPTIONS_RECORD_CARD=Garso plokštė
-SING_OPTIONS_RECORD_INPUT=Įvestis
-SING_OPTIONS_RECORD_CHANNEL=Kanalas
+SING_OPTIONS_MICROPHONES_WHEREAMI=Parinktys Įrašas
+SING_OPTIONS_MICROPHONES_DESC=Mikrofono nustatymai
+SING_OPTIONS_MICROPHONES_CARD=Garso plokštė
+SING_OPTIONS_MICROPHONES_INPUT=Įvestis
+SING_OPTIONS_MICROPHONES_CHANNEL=Kanalas
+SING_OPTIONS_MICROPHONES_THRESHOLD=Slenkstis
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrobangų krosnelė
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Pasirinktys Išplėstinė
 SING_OPTIONS_ADVANCED_DESC=Pažangūs nustatymai
