--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -98,7 +98,7 @@ SING_OPTIONS_GRAPHICS=Graphik
 SING_OPTIONS_SOUND=Toun
 SING_OPTIONS_LYRICS=Lyric
 SING_OPTIONS_THEMES=Design
-SING_OPTIONS_RECORD=Mikro
+SING_OPTIONS_MICROPHONES=Mikro
 SING_OPTIONS_ADVANCED=Erweidert
 SING_OPTIONS_EXIT=Zeréck
 
@@ -126,10 +126,8 @@ SING_OPTIONS_SOUND_WHEREAMI=Tounoptiounen
 SING_OPTIONS_SOUND_DESC=Tounastellungen
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Mikro lauschteren
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Hannergrondmusik
-SING_OPTIONS_SOUND_MIC_BOOST=Mikro-Unhiewung
 SING_OPTIONS_SOUND_CLICK_ASSIST=Click-Assistent
 SING_OPTIONS_SOUND_BEAT_CLICK=Metronom
-SING_OPTIONS_SOUND_THRESHOLD=Rauschënnerdrëck.
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=2-Spiller-Modus
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Iwwerbléck Lautst.
@@ -148,11 +146,13 @@ SING_OPTIONS_THEMES_THEME=Design
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Faarf
 
-SING_OPTIONS_RECORD_WHEREAMI=Opzeechnungsoptiounen
-SING_OPTIONS_RECORD_DESC=Mikrofonastellungen
-SING_OPTIONS_RECORD_CARD=Soundkaart
-SING_OPTIONS_RECORD_INPUT=Agank
-SING_OPTIONS_RECORD_CHANNEL=Kanal
+SING_OPTIONS_MICROPHONES_WHEREAMI=Opzeechnungsoptiounen
+SING_OPTIONS_MICROPHONES_DESC=Mikrofonastellungen
+SING_OPTIONS_MICROPHONES_CARD=Soundkaart
+SING_OPTIONS_MICROPHONES_INPUT=Agank
+SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
+SING_OPTIONS_MICROPHONES_THRESHOLD=Rauschënnerdrëck.
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikro-Unhiewung.
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Erweidert Optiounen
 SING_OPTIONS_ADVANCED_DESC=Erweidert Astellungen
