--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -98,7 +98,7 @@ SING_OPTIONS_GRAPHICS=Γραφικά
 SING_OPTIONS_SOUND=Ήχος
 SING_OPTIONS_LYRICS=Στίχοι
 SING_OPTIONS_THEMES=Θέματα
-SING_OPTIONS_RECORD=Ηχογράφηση
+SING_OPTIONS_MICROPHONES=Ηχογράφηση
 SING_OPTIONS_ADVANCED=Για προχωρημένους
 SING_OPTIONS_EXIT=Πίσω
 
@@ -126,10 +126,8 @@ SING_OPTIONS_SOUND_WHEREAMI=Επιλογές ήχου
 SING_OPTIONS_SOUND_DESC=Επιλογές ήχου
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Ήχος μικροφώνου
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Μουσική στο μενού
-SING_OPTIONS_SOUND_MIC_BOOST=Ισχύς μικροφώνου
 SING_OPTIONS_SOUND_CLICK_ASSIST=Βοήθεια με κλίκ
 SING_OPTIONS_SOUND_BEAT_CLICK=Βοήθεια ρυθμού
-SING_OPTIONS_SOUND_THRESHOLD=Ευαισθησία μικροφώνου
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Με δύο παίχτες
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Ένταση προεπισκόπισης
@@ -148,11 +146,13 @@ SING_OPTIONS_THEMES_THEME=Θέμα
 SING_OPTIONS_THEMES_SKIN=Μορφή θέματος
 SING_OPTIONS_THEMES_COLOR=Χρώμα
 
-SING_OPTIONS_RECORD_WHEREAMI=Επιλογές μικροφώνου
-SING_OPTIONS_RECORD_DESC=Ρυθμίσεις μικροφώνου
-SING_OPTIONS_RECORD_CARD=Κάρτα ήχου
-SING_OPTIONS_RECORD_INPUT=Επιλογή μικροφώνου
-SING_OPTIONS_RECORD_CHANNEL=Κανάλι
+SING_OPTIONS_MICROPHONES_WHEREAMI=Επιλογές μικροφώνου
+SING_OPTIONS_MICROPHONES_DESC=Ρυθμίσεις μικροφώνου
+SING_OPTIONS_MICROPHONES_CARD=Κάρτα ήχου
+SING_OPTIONS_MICROPHONES_INPUT=Επιλογή μικροφώνου
+SING_OPTIONS_MICROPHONES_CHANNEL=Κανάλι
+SING_OPTIONS_MICROPHONES_THRESHOLD=Ευαισθησία μικροφώνου
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Ισχύς μικροφώνου
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Επιλογές για προχωρημένους
 SING_OPTIONS_ADVANCED_DESC=Ρυθμίσεις για προχωρημένους
