--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -98,7 +98,7 @@ SING_OPTIONS_GRAPHICS=графика
 SING_OPTIONS_SOUND=звук
 SING_OPTIONS_LYRICS=текст
 SING_OPTIONS_THEMES=темы
-SING_OPTIONS_RECORD=запись
+SING_OPTIONS_MICROPHONES=запись
 SING_OPTIONS_ADVANCED=продвинутые
 SING_OPTIONS_EXIT=назад
 
@@ -126,10 +126,8 @@ SING_OPTIONS_SOUND_WHEREAMI=Настройки звука
 SING_OPTIONS_SOUND_DESC=настройки звука
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Вывод с микрофона
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Фоновая музыка
-SING_OPTIONS_SOUND_MIC_BOOST=Усиление мкрофона
 SING_OPTIONS_SOUND_CLICK_ASSIST=Метроном-помощник
 SING_OPTIONS_SOUND_BEAT_CLICK=Метроном
-SING_OPTIONS_SOUND_THRESHOLD=Погрешность
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Режим двух игроков
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Громкость превью
@@ -148,11 +146,13 @@ SING_OPTIONS_THEMES_THEME=Тема
 SING_OPTIONS_THEMES_SKIN=Скин
 SING_OPTIONS_THEMES_COLOR=Цвет
 
-SING_OPTIONS_RECORD_WHEREAMI=Настройки записи
-SING_OPTIONS_RECORD_DESC=настройки микрофона
-SING_OPTIONS_RECORD_CARD=Звуковая карта
-SING_OPTIONS_RECORD_INPUT=Вход
-SING_OPTIONS_RECORD_CHANNEL=Канал
+SING_OPTIONS_MICROPHONES_WHEREAMI=Настройки записи
+SING_OPTIONS_MICROPHONES_DESC=настройки микрофона
+SING_OPTIONS_MICROPHONES_CARD=Звуковая карта
+SING_OPTIONS_MICROPHONES_INPUT=Вход
+SING_OPTIONS_MICROPHONES_CHANNEL=Канал
+SING_OPTIONS_MICROPHONES_THRESHOLD=Погрешность
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Усиление мкрофона
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Дополнительные настройки
 SING_OPTIONS_ADVANCED_DESC=дополнительные настройки
