--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -98,7 +98,7 @@ SING_OPTIONS_GRAPHICS=画面
 SING_OPTIONS_SOUND=声音
 SING_OPTIONS_LYRICS=歌词
 SING_OPTIONS_THEMES=主题
-SING_OPTIONS_RECORD=录音
+SING_OPTIONS_MICROPHONES=录音
 SING_OPTIONS_ADVANCED=高级
 SING_OPTIONS_EXIT=返回
 
@@ -126,10 +126,8 @@ SING_OPTIONS_SOUND_WHEREAMI=声音选项
 SING_OPTIONS_SOUND_DESC=声音设置
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=麦克风回放
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=背景音乐
-SING_OPTIONS_SOUND_MIC_BOOST=麦克风增强
 SING_OPTIONS_SOUND_CLICK_ASSIST=“卡嗒”助手
 SING_OPTIONS_SOUND_BEAT_CLICK=节拍“卡嗒”
-SING_OPTIONS_SOUND_THRESHOLD=阈值
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=双人模式
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=预览音量
@@ -148,11 +146,13 @@ SING_OPTIONS_THEMES_THEME=主题
 SING_OPTIONS_THEMES_SKIN=皮肤
 SING_OPTIONS_THEMES_COLOR=颜色
 
-SING_OPTIONS_RECORD_WHEREAMI=录音选项
-SING_OPTIONS_RECORD_DESC=麦克风设置
-SING_OPTIONS_RECORD_CARD=声卡
-SING_OPTIONS_RECORD_INPUT=输入
-SING_OPTIONS_RECORD_CHANNEL=频道
+SING_OPTIONS_MICROPHONES_WHEREAMI=录音选项
+SING_OPTIONS_MICROPHONES_DESC=麦克风设置
+SING_OPTIONS_MICROPHONES_CARD=声卡
+SING_OPTIONS_MICROPHONES_INPUT=输入
+SING_OPTIONS_MICROPHONES_CHANNEL=频道
+SING_OPTIONS_MICROPHONES_THRESHOLD=阈值
+SING_OPTIONS_MICROPHONES_MIC_BOOST=麦克风增强
 
 SING_OPTIONS_ADVANCED_WHEREAMI=高级选项
 SING_OPTIONS_ADVANCED_DESC=高级设置
