Fix highscore stats bug in spanish screen

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -510,7 +510,7 @@ STAT_PAGE=Página %0:d de %1:d \n Registros %2:d de %3:d
 
 STAT_DESC_SCORES=Calificaciones
 STAT_DESC_SCORES_REVERSED=Peores Calificaciones
-STAT_FORMAT_SCORES=%0:d - %1:s\n %2:s - %5:s (%3:s) el %4:s
+STAT_FORMAT_SCORES=%0:s - %1:d puntos [%2:s] el %5:s \n%3:s - %4:s
 
 STAT_DESC_SINGERS=Cantantes
 STAT_DESC_SINGERS_REVERSED=Peores cantantes
