Added order menu  and ShowDuets ini option

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -54,9 +54,10 @@ SING_OPTIONS_EXIT=Atrás
 
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_SONGMENU=Menú
+SING_OPTIONS_GAME_DUETS=Duetos
 SING_OPTIONS_GAME_TABS=Mostrar carpetas
 SING_OPTIONS_GAME_SORTING=Clasificar por
-SING_OPTIONS_GAME_SHOWSCORES=Ver puntuación online
+SING_OPTIONS_GAME_SHOWSCORES=Mostrar puntuación
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activar gamepad
 
 OPTION_VALUE_ROULETTE=Ruleta
@@ -560,10 +561,6 @@ SONG_MENU_START_MEDLEY=Cantar
 SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones
 
 SONG_MENU_NAME_SORTING=Menu ordenar
-SONG_MENU_SORTING_TABS_ON=Etiquetas SI
-SONG_MENU_SORTING_TABS_OFF=Etiquetas NO
-SONG_MENU_SORTING_ALL=Todas
-SONG_MENU_SORTING_DUET=Duetos
 SONG_MENU_SORTING_APPLY=Aplicar
 
 PARTY_PLAYLIST_MANUAL=Seleción manual
