--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -54,6 +54,7 @@ SING_OPTIONS_EXIT=Air ais
 
 SING_OPTIONS_GAME_LANGUAGE=Cànan
 SING_OPTIONS_GAME_SONGMENU=Clàr-taice nan òran
+SING_OPTIONS_GAME_DUETS=Òrain-chàraid
 SING_OPTIONS_GAME_TABS=Tabaichean
 SING_OPTIONS_GAME_SORTING=Seòrsachadh
 SING_OPTIONS_GAME_SHOWSCORES=Seall na sgòran
@@ -560,10 +561,6 @@ SONG_MENU_START_MEDLEY=Seinn!
 SONG_MENU_START_5_MEDLEY=Seinn %0:d òra(i)n!
 
 SONG_MENU_NAME_SORTING=Clàr-taice seòrsachaidh
-SONG_MENU_SORTING_TABS_ON=Tabaichean air
-SONG_MENU_SORTING_TABS_OFF=Tabaichean dheth
-SONG_MENU_SORTING_ALL=Na h-uile
-SONG_MENU_SORTING_DUET=Òrain-chàraid
 SONG_MENU_SORTING_APPLY=Cuir an sàs
 
 PARTY_PLAYLIST_MANUAL=Taghadh a làimh
