--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -54,6 +54,7 @@ SING_OPTIONS_EXIT=Πίσω
 
 SING_OPTIONS_GAME_LANGUAGE=Γλώσσα
 SING_OPTIONS_GAME_SONGMENU=Μενού τραγουδιού
+SING_OPTIONS_GAME_DUETS=Ντουέτες
 SING_OPTIONS_GAME_TABS=Ετικέτες
 SING_OPTIONS_GAME_SORTING=Ταξινόμιση
 ;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
@@ -561,10 +562,6 @@ SONG_MENU_DELETE_SONG=Διέγραψε τραγούδι
 ;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
 
 ;TODO: SONG_MENU_NAME_SORTING=Sort Menu
-;TODO: SONG_MENU_SORTING_TABS_ON=Tabs On
-;TODO: SONG_MENU_SORTING_TABS_OFF=Tabs Off
-SONG_MENU_SORTING_ALL=Όλα
-SONG_MENU_SORTING_DUET=Ντουέτες
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
