Fixed missing autoconf install in other distributions distinct of (K)Ubuntu 19.10

--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-sudo apt-get update && sudo apt-get install automake make gcc fpc libsdl2-image-dev libavformat-dev libswscale-dev libsqlite3-dev libfreetype6-dev portaudio19-dev libportmidi-dev liblua5.3-dev libopencv-highgui-dev
+sudo apt-get update && sudo apt-get install automake autoconf make gcc fpc libsdl2-image-dev libavformat-dev libswscale-dev libsqlite3-dev libfreetype6-dev portaudio19-dev libportmidi-dev liblua5.3-dev libopencv-highgui-dev
 ./autogen.sh
 ./configure
 make
