--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -2,7 +2,7 @@
 LANGUAGE=Deutsch
 
 SING_LOADING=Lädt...
-;TODO: SING_LOADING_SONGS=Loading songs from folder %s
+SING_LOADING_SONGS=Lade Titel aus Verz.  %s
 
 SING_SING=Singen
 SING_SING_DESC=Singen
@@ -25,10 +25,10 @@ SING_EXIT_DESC=Spiel verlassen
 SING_ABOUT=Über
 SING_ABOUT_DESC=Über Utrastar Deluxe WorldParty
 
-;TODO: SING_PLAYER_TITLE=Profiles
+SING_PLAYER_TITLE=Profile
 SING_PLAYER_READY=Spieler bereit zum Singen
 SING_PLAYER_COUNT=Anzahl der Spieler
-;TODO: SING_PLAYER_EDIT=Customize a player
+SING_PLAYER_EDIT=Spieler anpassen
 SING_PLAYER_NAME=Schreib deinen Namen
 SING_PLAYER_COLOR=Wähle eine Farbe
 SING_PLAYER_LEVEL=Wähle ein Level
@@ -118,9 +118,9 @@ SING_OPTIONS_LYRICS_FONT=Schriftart
 SING_OPTIONS_LYRICS_EFFECT=Effekt
 SING_OPTIONS_LYRICS_NOTELINES=Notenlinien
 
-;TODO: OPTION_VALUE_PLAIN=Stylized
-;TODO: OPTION_VALUE_OLINE1=With thin edge
-;TODO: OPTION_VALUE_OLINE2=With thick edge
+OPTION_VALUE_PLAIN=Stilisiert
+OPTION_VALUE_OLINE1=Mit dünnem Rand
+OPTION_VALUE_OLINE2=Mit dickem Rand
 
 OPTION_VALUE_SIMPLE=Einfach
 OPTION_VALUE_ZOOM=Vergrößern
@@ -228,7 +228,7 @@ SING_OPTIONS_WEBCAM_BRIGHTNESS=Helligkeit
 SING_OPTIONS_WEBCAM_SATURATION=Sättigung
 SING_OPTIONS_WEBCAM_HUE=Farbton
 SING_OPTIONS_WEBCAM_EFFECT=Effekt
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Voransicht aktivieren
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Vorschau aktivieren
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Vorschau deaktivieren
@@ -304,8 +304,8 @@ SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
 SING_SONG_SELECTION_LEGEND_TITLE=Legende
 SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley berechnet
 SING_SONG_SELECTION_LEGEND_DUET=Duett
 
 SING_TOTAL=Gesamt
@@ -574,11 +574,11 @@ JUKEBOX_MODE=Jukebox Modus
 
 ABOUT_MAIN=Über...
 ABOUT_USDX_DEVELOPEDBY=Entwickelt von
-;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
-;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
-;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_CHECK_CHECKING=Suche nach Aktualisierungen...
+ABOUT_CHECK_AVAILABLE=Eine neue Version ist verfügbar
+ABOUT_CHECK_UPTODATE=WorldParty ist aktuell
+ABOUT_CHECK_CONNECTION=Keine Internetverbindung
+ABOUT_OVERVIEW=Entdecke eine neue Art alleine oder mit Freunden zu singen. \n Spaß ist garantiert. \n\nWorldParty ist ein Zweig der orginal Version Ultrastar Deluxe 1.1 gestaltet und entwickelt vom UltraStar España Team, die größe Karaoke Community.\n\n\nDies Programm ist frei und unter der GPL lizenziert. \n\n Für weitere Informationen besucht uns auf: \n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Entwickelt von
 DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besuchen Sie uns für weitere Informationen.\n\nhttps://ultrastar-es.org
@@ -589,7 +589,7 @@ SCREENSHOT_FAILED=Konnte Bildschirmfoto nicht sichern
 MSG_ERROR_TITLE=Fehler
 MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Frage
-MSG_QUIT_USDX=UltraStar wirklich beenden?
+MSG_QUIT_USDX=UltraStar WorldParty wirklich beenden?
 MSG_END_PARTY=Party-Modus wirklich beenden?
 
 ERROR_NO_SONGS=Keine Songs vorhanden.
