Created empty profiles screen

--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Microphones
 SING_OPTIONS_ADVANCED=Advanced
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webcam
+SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Back
 
 SING_OPTIONS_GAME_LANGUAGE=Language
