New search bar (part1)

--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Brug Jokeren
 
 SONG_JUMPTO_DESC=Søg Sang
-SONG_JUMPTO_TYPE_DESC=Søg Efter:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Fest modus
 PARTY_DIFFICULTY=Sværhedsgrad
