--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Joker einsetzen
 
 SONG_JUMPTO_DESC=Song suchen
-SONG_JUMPTO_TYPE_DESC=Suchen in:
+SONG_JUMPTO_TYPE_DESC=Was wollen Sie jetzt singen?
 
 PARTY_MODE=Party-Modus
 PARTY_DIFFICULTY=Schwierigkeit
