--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Gastar comodín
 SONG_MENU_NAME_PARTY_JOKER=Gastar comodín
 
 SONG_JUMPTO_DESC=Buscar canción
-SONG_JUMPTO_TYPE_DESC=Buscar por:
+SONG_JUMPTO_TYPE_DESC=¿Qué quieres cantar ahora?
 
 PARTY_MODE=Modo fiesta
 PARTY_DIFFICULTY=Dificultad
