--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Komodina
 SONG_MENU_NAME_PARTY_JOKER=Komodina erabili
 
 SONG_JUMPTO_DESC=Bilatu
-SONG_JUMPTO_TYPE_DESC=Bilatu:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Taldean Abestu
 PARTY_DIFFICULTY=Zailtasuna
