--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -380,7 +380,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Utiliser Joker
 
 SONG_JUMPTO_DESC=Rechercher
-SONG_JUMPTO_TYPE_DESC=Recherche :
+SONG_JUMPTO_TYPE_DESC=Que voulez-vous chanter maintenant?
 
 PARTY_MODE=Mode fête
 PARTY_DIFFICULTY=Difficulté
