--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Aleatorio
 SONG_MENU_NAME_PARTY_JOKER=Aleatorio
 
 SONG_JUMPTO_DESC=Procurar canción
-SONG_JUMPTO_TYPE_DESC=Procurar por:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Modo festa
 PARTY_DIFFICULTY=Dificultade
