--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Amadan
 SONG_MENU_NAME_PARTY_JOKER=Cleachd amadan
 
 SONG_JUMPTO_DESC=Lorg òran
-SONG_JUMPTO_TYPE_DESC=Lorg:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Modh cèilidh
 PARTY_DIFFICULTY=Duilgheadas
