--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Iskoristi joker
 
 SONG_JUMPTO_DESC=Pretraži pjesme
-SONG_JUMPTO_TYPE_DESC=Traži :
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mod
 PARTY_DIFFICULTY=Težina
