--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Jolly
 SONG_MENU_NAME_PARTY_JOKER=Gioca il jolly
 
 SONG_JUMPTO_DESC=Cerca Canzone
-SONG_JUMPTO_TYPE_DESC=Cerca per:
+SONG_JUMPTO_TYPE_DESC=Cosa vuoi cantare adesso?
 
 PARTY_MODE=Modalità party
 PARTY_DIFFICULTY=Difficoltà
