--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Joker asetzen
 
 SONG_JUMPTO_DESC=Sichen no
-SONG_JUMPTO_TYPE_DESC=Sichen no:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Partymodus
 PARTY_DIFFICULTY=Schwieregkeet
