--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Joker inzetten?
 
 SONG_JUMPTO_DESC=Zoek liedje
-SONG_JUMPTO_TYPE_DESC=Zoek naar:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mode
 PARTY_DIFFICULTY=Moeilijkheidsgraad
