--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Weź jokera
 
 SONG_JUMPTO_DESC=Szukaj
-SONG_JUMPTO_TYPE_DESC=Szukaj:
+SONG_JUMPTO_TYPE_DESC=Co chcesz teraz zaśpiewać?
 
 PARTY_MODE=Tryb imprezy
 PARTY_DIFFICULTY=Poziom
