--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Usar Joker
 
 SONG_JUMPTO_DESC=Procurar
-SONG_JUMPTO_TYPE_DESC=Procurar por:
+SONG_JUMPTO_TYPE_DESC=O que queres cantar agora?
 
 PARTY_MODE=Modo Festa
 PARTY_DIFFICULTY=Dificuldade
