--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Джокер
 SONG_MENU_NAME_PARTY_JOKER=взять джокер
 
 SONG_JUMPTO_DESC=поиск песни
-SONG_JUMPTO_TYPE_DESC=Искать:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=режим вечеринки
 PARTY_DIFFICULTY=Сложность
