--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Cântă unul la întâmplare
 SONG_MENU_NAME_PARTY_JOKER=La întâmplare
 
 SONG_JUMPTO_DESC=Caută cântec
-SONG_JUMPTO_TYPE_DESC=Caută după:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Modul party
 PARTY_DIFFICULTY=Dificultate
