--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=ta joker
 
 SONG_JUMPTO_DESC=sök låt
-SONG_JUMPTO_TYPE_DESC=Sök efter:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=partyläge
 PARTY_DIFFICULTY=Svårighetsnivå
