--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Jóker
 SONG_MENU_NAME_PARTY_JOKER=Taka jóker
 
 SONG_JUMPTO_DESC=Lagaleit
-SONG_JUMPTO_TYPE_DESC=Leita að:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Partísnið
 PARTY_DIFFICULTY=Erfiðleikastig
