--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Žolík
 SONG_MENU_NAME_PARTY_JOKER=Vzít žolíka
 
 SONG_JUMPTO_DESC=Hledat skladbu
-SONG_JUMPTO_TYPE_DESC=Hledat:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Párty mód
 PARTY_DIFFICULTY=Obtížnost
