--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Μπαλαντέρ
 SONG_MENU_NAME_PARTY_JOKER=Επιλογή μπαλαντέρ
 
 SONG_JUMPTO_DESC=Ψάξε τραγούδι
-SONG_JUMPTO_TYPE_DESC=Ψάξε για:
+SONG_JUMPTO_TYPE_DESC=Что ты хочешь спеть сейчас?
 
 PARTY_MODE=Είδος παιχνιδιού "Πάρτυ"
 PARTY_DIFFICULTY=Δυσκολία
