--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=ジョーカー
 SONG_MENU_NAME_PARTY_JOKER=ジョーカーを使う
 
 SONG_JUMPTO_DESC=曲検索
-SONG_JUMPTO_TYPE_DESC=検索：
+SONG_JUMPTO_TYPE_DESC=今、何を歌いたいのか？
 
 PARTY_MODE=パーティー・モード
 PARTY_DIFFICULTY=面倒
