--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=王牌
 SONG_MENU_NAME_PARTY_JOKER=使用王牌
 
 SONG_JUMPTO_DESC=搜索歌曲
-SONG_JUMPTO_TYPE_DESC=查询方式：
+SONG_JUMPTO_TYPE_DESC=你现在想唱什么？
 
 PARTY_MODE=派对模式
 PARTY_DIFFICULTY=难度
