--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -376,7 +376,7 @@ SONG_MENU_JOKER=Comodí
 SONG_MENU_NAME_PARTY_JOKER=Utilitzar comodí
 
 SONG_JUMPTO_DESC=Buscar cançó
-SONG_JUMPTO_TYPE_DESC=Buscar:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Mode festa
 PARTY_DIFFICULTY=Dificultat
