--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -380,7 +380,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Take joker
 
 SONG_JUMPTO_DESC=Search song
-SONG_JUMPTO_TYPE_DESC=Search for:
+SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mode
 PARTY_DIFFICULTY=Difficulty
