--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Paimk jokerį
 
 SONG_JUMPTO_DESC=Ieškoti dainos
-SONG_JUMPTO_TYPE_DESC=Ieškoti:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 ;TODO: PARTY_MODE=Party mode
 ;TODO: PARTY_DIFFICULTY=Difficulty
