--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Joker felhasználása
 
 SONG_JUMPTO_DESC=Dal keresés
-SONG_JUMPTO_TYPE_DESC=Keresés:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Buli mód
 PARTY_DIFFICULTY=Nehézségi Szint
