--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Bruk joker
 
 SONG_JUMPTO_DESC=Søk etter sang
-SONG_JUMPTO_TYPE_DESC=Søk etter:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Partymodus
 PARTY_DIFFICULTY=Vanskelighetsgrad
