--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -377,7 +377,7 @@ SONG_MENU_JOKER=Žolík
 SONG_MENU_NAME_PARTY_JOKER=Použiť žolíka
 
 SONG_JUMPTO_DESC=Hľadať skladbu
-SONG_JUMPTO_TYPE_DESC=Hľadať:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Párty mód
 PARTY_DIFFICULTY=Obtiažnosť
