--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Joker
 SONG_MENU_NAME_PARTY_JOKER=Izkoristi jokerja
 
 SONG_JUMPTO_DESC=Poišci pesem
-SONG_JUMPTO_TYPE_DESC=Isci po:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Zabava
 PARTY_DIFFICULTY=Težavnost
