--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Jokeri
 SONG_MENU_NAME_PARTY_JOKER=Ota jokeri
 
 SONG_JUMPTO_DESC=Etsi kappaletta
-SONG_JUMPTO_TYPE_DESC=Etsi kaletta:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Tiimit
 PARTY_DIFFICULTY=Vaikeustaso
