--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -379,7 +379,7 @@ SONG_MENU_JOKER=Dzoker
 SONG_MENU_NAME_PARTY_JOKER=Uzmi dzokera
 
 SONG_JUMPTO_DESC=Trazi pesmu
-SONG_JUMPTO_TYPE_DESC=Trazi:
+;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
 
 PARTY_MODE=Timski mod
 PARTY_DIFFICULTY=Tezina
