Added missing legend icons

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -304,6 +304,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
 SING_SONG_SELECTION_LEGEND_MEDLEY=Versió curta
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Versió curta calculada
 SING_SONG_SELECTION_LEGEND_DUET=Duo
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Total
 SING_MODE=Cantar sol
