--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -308,6 +308,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Video
 SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_RAP=Rap
+SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Total
 SING_MODE=Sing solo
