--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Video
 SING_SONG_SELECTION_LEGEND_MEDLEY=Versión corta
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Versión corta calculada
 SING_SONG_SELECTION_LEGEND_DUET=Dueto
+SING_SONG_SELECTION_LEGEND_RAP=Rap
+SING_SONG_SELECTION_LEGEND_CREATEDBY=Creada por
+SING_SONG_SELECTION_LEGEND_FIXEDBY=Reparada por
 
 SING_TOTAL=Total
 SING_MODE=Canta solo o acompañado
