--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -307,6 +307,9 @@ PLAYLIST_CATTEXT=Zerrenda: %s
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 ;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Guztira
 SING_MODE=Bakarka abestu
