--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -308,6 +308,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Vidéo
 SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculé
 SING_SONG_SELECTION_LEGEND_DUET=Duo
+SING_SONG_SELECTION_LEGEND_RAP=Rap
+SING_SONG_SELECTION_LEGEND_CREATEDBY=Créée par
+SING_SONG_SELECTION_LEGEND_FIXEDBY=Réparée par
 
 SING_TOTAL=Total
 SING_MODE=Mode chanter
