--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Video
 SING_SONG_SELECTION_LEGEND_MEDLEY=Versione breve
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Versione breve calcolata
 SING_SONG_SELECTION_LEGEND_DUET=Duetto
+SING_SONG_SELECTION_LEGEND_RAP=Rap
+SING_SONG_SELECTION_LEGEND_CREATEDBY=Creata da
+SING_SONG_SELECTION_LEGEND_FIXEDBY=Riparata da
 
 SING_TOTAL=Punteggio
 SING_MODE=Canta
