--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Vaizdo įrašas
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=medley calculated
 SING_SONG_SELECTION_LEGEND_DUET=Duetas
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Iš viso
 SING_MODE=Dainuoti solo
