--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=βίντεο
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 SING_SONG_SELECTION_LEGEND_DUET=Ντουέτο
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Σύνολο
 SING_MODE=Τραγούδα σόλο
