--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Videó
 SING_SONG_SELECTION_LEGEND_MEDLEY=Egyveleg
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Egyveleg kiszámolva
 SING_SONG_SELECTION_LEGEND_DUET=Duett
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Összesen
 SING_MODE=Egyszeri játékos
