--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -307,6 +307,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
 SING_SONG_SELECTION_LEGEND_MEDLEY=Versão curta
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Versão curta calculada
 SING_SONG_SELECTION_LEGEND_DUET=Dueto
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Total
 SING_MODE=Cantar Solo
