--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -305,6 +305,9 @@ SING_SONG_SELECTION_LEGEND_VIDEO=Video
 SING_SONG_SELECTION_LEGEND_MEDLEY=Všehochuť
 SING_SONG_SELECTION_LEGEND_MEDLEYC=Všehochuť (vypočítaná)
 SING_SONG_SELECTION_LEGEND_DUET=Duet
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=Celkovo
 SING_MODE=Spievať sólo
