--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -307,6 +307,9 @@ PLAYLIST_CATTEXT=曲順: %s
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 ;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
+;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
+;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
 
 SING_TOTAL=全部
 SING_MODE=一人で歌う
