Autodetected system language

--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Euskara
+LANGUAGE_ISO_CODE=eu
 
 SING_LOADING=Kargatzen...
 ;TODO: SING_LOADING_SONGS=Loading songs from folder %s
