--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Français
+LANGUAGE_ISO_CODE=fr
 
 SING_LOADING=Chargement...
 SING_LOADING_SONGS=Chargement des chansons à partir du dossier %s
