--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Gàidhlig
+LANGUAGE_ISO_CODE=dg
 
 SING_LOADING=’Ga luchdadh…
 ;TODO: SING_LOADING_SONGS=Loading songs from folder %s
