--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Italiano
+LANGUAGE_ISO_CODE=it
 
 SING_LOADING=Caricamento...
 SING_LOADING_SONGS=Caricamento di canzoni dalla cartella %s
