--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Lëtzebuergesch
+LANGUAGE_ISO_CODE=lb
 
 SING_LOADING=Lueden...
 ;TODO: SING_LOADING_SONGS=Loading songs from folder %s
