--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
-LANGUAGE=Pу́сский
+LANGUAGE=Pyсский
+LANGUAGE_ISO_CODE=ru
 
 SING_LOADING=Загрузка...
 SING_LOADING_SONGS=Поиск композиций в папке %s
