--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Română
+LANGUAGE_ISO_CODE=ro
 
 SING_LOADING=Încărcând ...
 ;TODO: SING_LOADING_SONGS=Loading songs from folder %s
