--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Slovenský
+LANGUAGE_ISO_CODE=sk
 
 SING_LOADING=... nahráva sa hra!
 SING_LOADING_SONGS=Načítavajú sa skladby z priečinka %s
