--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Suomi
+LANGUAGE_ISO_CODE=fi
 
 SING_LOADING=Moikkamoi! Tää systeemi niinku lataa...
 SING_LOADING_SONGS=Ladataan kappaleita %s
