--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -1,5 +1,6 @@
 ﻿[Text]
 LANGUAGE=Ελληνικά
+LANGUAGE_ISO_CODE=el
 
 SING_LOADING=Φόρτωνει...
 ;TODO: SING_LOADING_SONGS=Loading songs from folder %s
